--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "smartswitch",
+  "name": "inhalesafe-switch",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongoose": "^8.1.1",
     "mqtt": "^5.3.5",
     "next": "14.1.0",
+    "nextjs-cors": "^2.2.0",
     "react": "^18",
     "react-dom": "^18"
   },
